--- a/hms.html
+++ b/hms.html
@@ -8,5 +8,7 @@
 </head>
 <body>
   <h1>Welcome</h1>
+  <h2>Hello World</h2>
+  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo iusto adipisci perspiciatis odit tenetur, magnam incidunt inventore quam temporibus, distinctio possimus dignissimos, ullam sequi id repellendus ex quod quae eius.</p>
 </body>
 </html>
